update jlink calls